--- a/Views/register.ejs
+++ b/Views/register.ejs
@@ -1,17 +1,15 @@
 <%- include('partials/head') %>
 
-<div class="rapper">
-
-<h1>Registrer!</h1>
+<h1>Register!</h1>
 
 <form action="/auth/register" method="POST">
     <input type="text" name="name" placeholder="Name">
     <input type="email" name="email" placeholder="E-mail">
     <input type="password" name="password" placeholder="Password">
     <input type="password" name="confirmPassword" placeholder="Confirm password">
-    <input type="submit" name="registrer" id="register">
+    <input type="submit" name="registrer" id="register" value="Register">
 </form>
 
-</div>
+<a href="/auth/login">Already have an account?</a>
 
 <%- include('partials/foot') %>
