La til faq, manual, og fiksa mere på tickets
Admins kan registrere faq svar og spørsmål mens brukere kan lese kunn de som har fått svar. Bruker manual har tekst som forklarer hva de forskjellige sidene gjør.

--- a/Views/Partials/navbar.ejs
+++ b/Views/Partials/navbar.ejs
@@ -11,6 +11,10 @@
     <a href="/auth/tickets">My Tickets</a>  
     <% } %>
     <br>
+    <a href="/auth/manual">User Manual</a>
+    <br>
+    <a href="/auth/faq">FAQ</a>
+    <br>
     <a href="/auth/logout">Log Out</a>
 
 <a href="/"><h3>Supportlot</h3></a>
